<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:layout_editor_absoluteX="-3dp"
    tools:layout_editor_absoluteY="24dp">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="35dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/confirmation_link_will_be_sent_to_corresponding_email_address"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/pasifico"
        android:gravity="center|center_horizontal|top"
        android:text="@string/reset_password"
        android:textAppearance="@style/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/email_address"
        android:layout_width="271.25dp"
        android:layout_height="24.39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center_vertical"
        android:lineHeight="23sp"
        android:text="@string/email_address"
        android:textAppearance="@style/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="303dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mail_pass_bg"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:autofillHints="Enter Email"
            android:fontFamily="@font/calibri_regular"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="27dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="17dp"
            app:srcCompat="@drawable/email_icon"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <Button
        android:id="@+id/sendbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbtn"
        android:clickable="true"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/send"
        android:textAppearance="@style/btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>