<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PhoneActivity"
    >

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="356dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/log_out"
        android:textColor="#2177F9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/otp"
        android:layout_width="43dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:text="@string/otp"
        android:textAppearance="@style/email_address"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="292dp"
        android:background="@drawable/bg_inputtext"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_otp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="5dp"
            android:autofillHints="Enter Phone"
            android:background="@null"
            android:fontFamily="@font/calibri_regular"
            android:hint="@string/enter_otp"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/phone_numbe"
        android:layout_width="wrap_content"
        android:layout_height="24.39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:gravity="center_vertical"
        android:text="@string/phone_number"
        android:textAppearance="@style/email_address"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="196dp"

        android:background="@drawable/bg_inputtext"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="260dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="6dp"
            android:autofillHints="Enter Phone"
            android:background="@null"
            android:fontFamily="@font/calibri_regular"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/phone_icon" />

        <TextView
            android:id="@+id/contry_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/calibri_bold"
            android:gravity="center_vertical"
            android:text="@string/contrycode"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/lengkapi_data"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/pasifico"
        android:gravity="center_horizontal|top"
        android:text="Add Phone Number"
        android:textColor="?android:textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/send_otp"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="356dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/send_otp"
        android:textColor="#2177F9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="424dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="#F94A21"
        android:fontFamily="@font/calibri_bold"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textAppearance="@style/btn"
        android:textColor="@color/white"
        android:textColorLink="#FF5722"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>