<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity"
    >


    <RelativeLayout
        android:id="@+id/loginbtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#00FFFFFF"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_toStartOf="@+id/login"
            app:srcCompat="@drawable/login_icon" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="9dp"
            android:clickable="false"
            android:fontFamily="@font/pasifico"
            android:gravity="top"
            android:lineHeight="31sp"
            android:text="@string/login"
            android:textAppearance="@style/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/pasifico"
        android:gravity="center|center_horizontal|top"
        android:text="@string/sign_up"
        android:textAppearance="@style/login"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/google_btn"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:background="@drawable/rectangle_1"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="0.209">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/google_icon" />

        <TextView
            android:id="@+id/login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/google_icon"
            android:layout_alignParentStart="true"
            android:layout_marginStart="42dp"
            android:layout_marginBottom="-21dp"
            android:fontFamily="@font/calibri_bold"
            android:gravity="top"
            android:lineHeight="18sp"
            android:text="@string/continue_with_google"
            android:textAppearance="@style/facebook_login"
            android:textColor="@color/black" />
    </RelativeLayout>

    <TextView
        android:id="@+id/privacypolicy"
        android:layout_width="273dp"
        android:layout_height="54dp"
        android:layout_marginBottom="68dp"
        android:clickable="true"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center_horizontal|top"
        android:text="@string/agreement"
        android:textAppearance="@style/agreement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/calibri_regular"
        android:text="or"
        android:textColor="?android:textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="#F94A21"
        android:fontFamily="@font/calibri_bold"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sign_up"
        android:textAppearance="@style/btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/mail_pass_bg"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:autofillHints="Enter Email"
            android:background="@null"
            android:fontFamily="@font/calibri_regular"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="27dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="17dp"
            app:srcCompat="@drawable/email_icon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="24.39dp"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center_vertical"
        android:lineHeight="23sp"
        android:text="@string/email_address"
        android:textAppearance="@style/email_address"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="24.39dp"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center_vertical"
        android:lineHeight="23sp"
        android:text="@string/password"
        android:textAppearance="@style/email_address"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/mail_pass_bg"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:autofillHints="Enter Password"
            android:background="@null"
            android:fontFamily="@font/calibri_regular"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="24.39dp"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center_vertical"
        android:lineHeight="23sp"
        android:text="@string/confirm_password"
        android:textAppearance="@style/email_address"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/mail_pass_bg"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:autofillHints="Enter Password"
            android:background="@null"
            android:fontFamily="@font/calibri_regular"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHint="#474747"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="361dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>